# WARDEN

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  PROGRESS.md  README.md  REFACTOR.md  SPEC.md  SUMMARY.md  dev-viz.html  dev-warroom.html  index.html  orbs.html  package.json  pnpm-lock.yaml  radar-lab.html  tsconfig.json  vite.config.ts
docs/: OVERVIEW.txt
docs/ideas/: 2026-06-24-dossier-profile-by-proof.md
docs/superpowers/: 2026-06-23-m2-self-review.md
docs/superpowers/notes/: 2026-06-24-radar-diagnosis.md  2026-06-25-radar-correctness-report.md
docs/superpowers/plans/: 2026-06-22-m2-face.md  2026-06-23-m3-radar.md  2026-06-24-m3-radar-habits-ux.md  2026-06-24-radar-presence-backend.md  2026-06-24-radar-presence-frontend.md  2026-06-25-discovery-mode-double-click-home.md  2026-06-25-m4-forge.md  2026-06-25-radar-correctness-fix.md
docs/superpowers/specs/: 2026-06-22-m2-face-design.md  2026-06-23-m2-forensic-reconstruction-design.md  2026-06-23-m3-near-ai-engine-swap.md  2026-06-23-m3-radar-design.md  2026-06-23-warroom-orb-mindmap-design.md  2026-06-24-m3-radar-habits-ux-design.md  2026-06-24-radar-presence-polish-design.md  2026-06-25-discovery-mode-double-click-home-design.md  2026-06-25-living-habits-design.md  2026-06-25-m4-forge-design.md  2026-06-25-radar-ui-overhaul-design.md
hand-mode/: README.md  positionOverrides.ts  useNodeDrag.ts
scripts/: check-arch.mjs  render-intro.mjs
src/: diagnosis.test.ts  diagnosis.ts  main.ts  style.css  warRoom.ts
src-tauri/: Cargo.toml  Info.plist  clippy.toml  rust-toolchain.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: radar_probe.rs
src-tauri/src/: brain.rs  commands.rs  config.rs  detectors.rs  featurizer.rs  forge.rs  habits.rs  harness_theme.rs  ir.rs  lib.rs  main.rs  radar.rs  redaction.rs  scaffold.rs  scheduler.rs  store.rs  util.rs  window.rs
src-tauri/src/ingest/: claude_code.rs  codex.rs  mod.rs
src-tauri/src/platform/: fallback.rs  macos.rs  mod.rs
src-tauri/src/radar/: agent.rs  assemble.rs  composition.rs  context.rs  hierarchy.rs  identity.rs  live.rs  liveness.rs  mod.rs  model.rs  status.rs
src-tauri/src/scheduler/: habits.rs  radar.rs  watch.rs
src-tauri/tests/: e2e_diagnosis.rs  forge_e2e.rs
src-tauri/tests/fixtures/: codex_expected_ir.json  codex_rollout_sample.jsonl
src/viz/: AgentCore.tsx  CameraRig.tsx  Constellation.tsx  FilterBar.test.tsx  FilterBar.tsx  NavBar.test.ts  NavBar.tsx  Orb.tsx  PlayerHost.tsx  RadarConstellation.test.ts  RadarConstellation.tsx  RadarDetailPanel.test.tsx  RadarDetailPanel.tsx  RadarHoverCard.test.tsx  RadarHoverCard.tsx  Sidebar.test.tsx  Sidebar.tsx  WarRoom.test.ts  WarRoom.tsx  bridge.test.ts  bridge.ts  cameraFraming.test.ts  cameraFraming.ts  chrome.test.tsx  chrome.tsx  dev.tsx  devWarRoom.tsx  emphasis.test.ts  harnessColors.test.ts  harnessColors.ts  harnessTheme.ts  mount.test.ts  mount.tsx  orbLayout.test.ts  orbLayout.ts  orbTypes.ts  radarHonesty.test.ts  radarLayout.test.ts  radarLayout.ts  radarLifecycle.test.ts  (+12 more)
src/viz/compositions/: Intro.tsx  Recap.tsx  Reveal.tsx  palette.ts  smoke.test.ts  timing.ts
src/viz/dev/preview/: radarReal.tsx
src/viz/modules/habits/: Orb.tsx
src/viz/modules/radar/: RadarDetailPanel.test.tsx  RadarDetailPanel.tsx  RadarHoverCard.tsx  radarLifecycle.test.ts  rosterTree.test.ts  rosterTree.ts
src/viz/preview/: orbLab.tsx  radarLab.tsx  radarReal.tsx  realRadar.json
src/viz/shared/lib/: emphasis.ts
web/: main.ts  style.css
web/viz/: windowChrome.test.ts
web/viz/app/: mount.test.ts  mount.tsx
web/viz/dev/: dev.tsx  devWarRoom.tsx
(+55 files in other folders)
