[package]
name = "warden"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
default-run = "warden"

[lib]
name = "warden_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "warden"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
dotenvy = "0.15"
futures-util = "0.3"
hex = "0.4"
libc = "0.2"
notify = "6.1"
once_cell = "1.21"
regex = "1.12"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled", "chrono", "serde_json", "array", "functions"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
similar = "2.6"
tauri = { version = "2.9.5", features = ["macos-private-api", "tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-opener = "2.5.0"
tiktoken-rs = "0.12"
tokio = { version = "1.48", features = ["full"] }
tokio-util = "0.7"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2.5"

[dev-dependencies]
tempfile = "3.23"

# Guardrail (REFACTOR.md D2.3): production-code `.unwrap()` is DENIED. All prior
# sites were converted to `.expect("invariant")` (the sanctioned escape hatch for
# true invariants). `cargo clippy` now hard-fails on any new non-test unwrap. Tests
# are exempt (see clippy.toml). This denies only this one lint, not all warnings.
[lints.clippy]
unwrap_used = "deny"

# `pnpm tauri dev` builds WARDEN in the debug profile. The CPU-hot dev-time paths
# — walkdir over the Codex roots, serde_json transcript parsing, rusqlite/FTS5,
# notify, tiktoken — all live in DEPENDENCIES. Compiling those with optimizations
# (while keeping our own crate at opt-level 0 so incremental rebuilds stay fast)
# sharply cuts dev-mode backend CPU with zero effect on the shipped release build.
# One-time cost: the first dependency compile after this change is slower, then
# cached. Our crate (`warden`/`warden_lib`) is intentionally left unoptimized here.
[profile.dev.package."*"]
opt-level = 2
